@@ -539,6 +539,8 @@ Bug Fixes
   HyphenatedWordsFilter where they would create invalid offsets in
   some situations, leading to problems in highlighting.  (Robert Muir)
 
+* SOLR-2280: commitWithin ignored for a delete query (Juan Grande via janhoy)
+
 Other Changes
 ----------------------
 * SOLR-2922: Upgrade commons-io and commons-lang to 2.1 and 2.6, respectively. (koji)
